--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,4 +1,8 @@
 /* write your override styles here */
-#wall .tag-1 #tag-2{
+#wall .tag-1 #tag-2  {
+  display: none;
+}
+
+div#wall #tag-3.slick {
   display: none;
 }
