automatically backed up by learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -3,9 +3,6 @@
   display: none;
 }
 
-.div #tag-5.slick {
-  display: none;
-}
 
 body div#wall #tag-3.slick {
   display: none;
@@ -15,6 +12,9 @@ body div#wall #tag-3.slick {
   display: none;
 }
 
+div#wall .parent + .parent #tag-5.slick {
+  display: none;
+}
 
 body div#wall div.parent div:last-child div#tag-6 {
   display: none;
