--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -16,10 +16,10 @@ div#wall .parent + .parent #tag-5.slick {
   display: none;
 }
 
-body div#wall div.parent div:last-child div#tag-6 {
+#wall div.parent div:last-child div#tag-6 {
   display: none;
 }
 
-body div#wall div.parent + div.parent div > #tag-7.slick {
+div#wall div.parent + div.parent div > #tag-7.slick {
   display: none;
 }
