--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,24 +1,21 @@
-/* write your override styles here */
-#wall .tag-1 #tag-2  {
+#wall .tag-1 {
   display: none;
 }
-
-body div#wall #tag-3.slick {
+ body #wall #tag-2 {
   display: none;
 }
-
-#wall .parent #tag-4 {
+ body div#wall #tag-3.slick {
   display: none;
 }
-
-div#wall .parent + .parent #tag-5.slick {
+ #wall .parent #tag-4 {
   display: none;
 }
-
-#wall div.parent div:last-child div#tag-6 {
+ div#wall .parent + .parent #tag-5.slick {
   display: none;
 }
-
-div#wall div.parent + div.parent div > #tag-7.slick {
+ body div#wall div.parent div:last-child div#tag-6 {
+  display: none;
+}
+ body div#wall div.parent + div.parent div > #tag-7.slick {
   display: none;
 }
