--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -13,7 +13,7 @@
  div#wall .parent + .parent #tag-5.slick {
   display: none;
 }
-  div#wall div.parent div:last-child div#tag-6 {
+ body div#wall div.parent div:last-child div#tag-6 {
   display: none;
 }
  body div#wall div.parent + div.parent div > #tag-7.slick {
