--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -10,7 +10,7 @@
  #wall .parent #tag-4 {
   display: none;
 }
- div#wall .parent + .parent #tag-5.slick {
+ div.#wall .parent + .parent #tag-5.slick {
   display: none;
 }
  body div#wall div.parent div:last-child div#tag-6 {
